# ewwii-stack

./: .gitignore  INSTALL.md  LICENSE  ONBOARDING.md  README.md  install.sh
ewwii/: ewwii.rhai  ewwii.scss  tray_menu.env.example
ewwii/scripts/: app_icon  battery_icon  battery_time  cpu_pct  disk_h  disk_io  disk_pct  fan_rpm  focus_slot  gpu_pct  gpu_temp  gpu_vram  mail_class  mail_count  mail_status  mem_h  mem_pct  menu_click  menu_slot  minimize_slot  net_iface  net_io  net_io_human  static_icon  swap_pct  task_focus_sync  task_slot  task_sync  top_name  top_proc  top_val  tray_activate  tray_menu_open  tray_secondary  tray_slot  tray_sync  volume_icon  wifi_icon  wlrctl_data
labwc/: autostart.example
wlr-taskd/: build.sh  wlr-task.c  wlr-taskd.c
wlr-trayd/: Cargo.toml  build.sh
wlr-trayd/src/: client.rs  daemon.rs  menu.rs
