[package]
name = "wlr-trayd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wlr-trayd"
path = "src/daemon.rs"

[[bin]]
name = "wlr-tray"
path = "src/client.rs"

[[bin]]
name = "wlr-tray-menu"
path = "src/menu.rs"

[dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.5"
tokio = { version = "1", features = ["full"] }
system-tray = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
